BMERCP/src/SystemVerilog2TreeTransformation/SystemVerilog2TreeParser.java
// Generated from E://EclipseWorkspaces//GUIProjectWorkSpace//BMERCP//src//SystemVerilog2TreeTransformation//SystemVerilog2Tree.g4 by ANTLR 4.13.1

package SystemVerilog2TreeTransformation;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SystemVerilog2TreeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, CONST=14, TYPEDEF=15, ENUM=16, 
		ELSE=17, CASE=18, DEFAULT=19, BREAK=20, FOR=21, WHILE=22, BEGIN=23, END=24, 
		ENDCASE=25, IF=26, DISPLAY=27, ID=28, INT=29, HEX_INT=30, WS=31, SINGLE_LINE_COMMENT=32, 
		MULTI_LINE_COMMENT=33, STRING=34, CHAR=35, SEMICOLON=36, COLON=37, COMMA=38, 
		DOT=39, LPAREN=40, RPAREN=41, LBRACE=42, RBRACE=43, LBRACK=44, RBRACK=45, 
		EQUAL=46, PLUS=47, PLUSPPLUS=48, MINUS=49, MINUSMINUS=50, MINUSEQUAL=51, 
		PLUSEQUAL=52, EQUALMINUS=53, EQUALPLUS=54, STAR=55, SLASH=56, PERCENT=57, 
		LT=58, GT=59, LE=60, GE=61, EQEQ=62, NOTEQ=63, QUOTE=64, DOLLAR=65, AND=66, 
		OR=67, STARR=68;
	public static final int
		RULE_file = 0, RULE_moduleDecl = 1, RULE_moduleItem = 2, RULE_initialBlock = 3, 
		RULE_enumDecl = 4, RULE_enumList = 5, RULE_functionDecl = 6, RULE_returnType = 7, 
		RULE_parameterList = 8, RULE_parameter = 9, RULE_qualifier = 10, RULE_declaration = 11, 
		RULE_dataType = 12, RULE_statement = 13, RULE_statementTwo = 14, RULE_returnStatement = 15, 
		RULE_assignment = 16, RULE_assignmentType = 17, RULE_indexedID = 18, RULE_functionCall = 19, 
		RULE_argumentList = 20, RULE_argument = 21, RULE_transformedArgument = 22, 
		RULE_dataCastArgument = 23, RULE_bitsArgument = 24, RULE_functionCallID = 25, 
		RULE_ifStatement = 26, RULE_loopStatement = 27, RULE_forLoop = 28, RULE_whileLoop = 29, 
		RULE_switchStatement = 30, RULE_caseBlock = 31, RULE_defaultBlock = 32, 
		RULE_expression = 33, RULE_primary = 34, RULE_operator = 35, RULE_castFunctionCall = 36, 
		RULE_displayStatement = 37, RULE_comment = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "moduleDecl", "moduleItem", "initialBlock", "enumDecl", "enumList", 
			"functionDecl", "returnType", "parameterList", "parameter", "qualifier", 
			"declaration", "dataType", "statement", "statementTwo", "returnStatement", 
			"assignment", "assignmentType", "indexedID", "functionCall", "argumentList", 
			"argument", "transformedArgument", "dataCastArgument", "bitsArgument", 
			"functionCallID", "ifStatement", "loopStatement", "forLoop", "whileLoop", 
			"switchStatement", "caseBlock", "defaultBlock", "expression", "primary", 
			"operator", "castFunctionCall", "displayStatement", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'module'", "'endmodule'", "'initial'", "'logic[1:0]'", "'function'", 
			"'endfunction'", "'void'", "'int'", "'real'", "'logic'", "'byte'", "'return'", 
			"'bits'", "'const'", "'typedef'", "'enum'", "'else'", "'case'", "'default'", 
			"'break'", "'for'", "'while'", "'begin'", "'end'", "'endcase'", "'if'", 
			"'$display'", null, null, null, null, null, null, null, null, "';'", 
			"':'", "','", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", 
			"'+'", "'++'", "'-'", "'--'", "'-='", "'+='", "'=-'", "'=+'", "'*'", 
			"'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'''", "'$'", 
			"'&&'", "'||'", "'logic[31:0]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "CONST", "TYPEDEF", "ENUM", "ELSE", "CASE", "DEFAULT", "BREAK", 
			"FOR", "WHILE", "BEGIN", "END", "ENDCASE", "IF", "DISPLAY", "ID", "INT", 
			"HEX_INT", "WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "STRING", 
			"CHAR", "SEMICOLON", "COLON", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACE", 
			"RBRACE", "LBRACK", "RBRACK", "EQUAL", "PLUS", "PLUSPPLUS", "MINUS", 
			"MINUSMINUS", "MINUSEQUAL", "PLUSEQUAL", "EQUALMINUS", "EQUALPLUS", "STAR", 
			"SLASH", "PERCENT", "LT", "GT", "LE", "GE", "EQEQ", "NOTEQ", "QUOTE", 
			"DOLLAR", "AND", "OR", "STARR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SystemVerilog2Tree.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SystemVerilog2TreeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SystemVerilog2TreeParser.EOF, 0); }
		public ModuleDeclContext moduleDecl() {
			return getRuleContext(ModuleDeclContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(78);
			moduleDecl();
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SystemVerilog2TreeParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SystemVerilog2TreeParser.SEMICOLON, 0); }
		public List<ModuleItemContext> moduleItem() {
			return getRuleContexts(ModuleItemContext.class);
		}
		public ModuleItemContext moduleItem(int i) {
			return getRuleContext(ModuleItemContext.class,i);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterModuleDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitModuleDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitModuleDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			match(ID);
			setState(83);
			match(SEMICOLON);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13361274664L) != 0)) {
				{
				{
				setState(84);
				moduleItem();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleItemContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public InitialBlockContext initialBlock() {
			return getRuleContext(InitialBlockContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public ModuleItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterModuleItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitModuleItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitModuleItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleItemContext moduleItem() throws RecognitionException {
		ModuleItemContext _localctx = new ModuleItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleItem);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				functionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				initialBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				enumDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitialBlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(SystemVerilog2TreeParser.BEGIN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode END() { return getToken(SystemVerilog2TreeParser.END, 0); }
		public InitialBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterInitialBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitInitialBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitInitialBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitialBlockContext initialBlock() throws RecognitionException {
		InitialBlockContext _localctx = new InitialBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_initialBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__2);
			setState(100);
			match(BEGIN);
			setState(101);
			statement();
			setState(102);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumDeclContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(SystemVerilog2TreeParser.TYPEDEF, 0); }
		public TerminalNode ENUM() { return getToken(SystemVerilog2TreeParser.ENUM, 0); }
		public TerminalNode LBRACE() { return getToken(SystemVerilog2TreeParser.LBRACE, 0); }
		public EnumListContext enumList() {
			return getRuleContext(EnumListContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(SystemVerilog2TreeParser.RBRACE, 0); }
		public TerminalNode ID() { return getToken(SystemVerilog2TreeParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(SystemVerilog2TreeParser.SEMICOLON, 0); }
		public EnumDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterEnumDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitEnumDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitEnumDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumDeclContext enumDecl() throws RecognitionException {
		EnumDeclContext _localctx = new EnumDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enumDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TYPEDEF);
			setState(105);
			match(ENUM);
			setState(106);
			match(T__3);
			setState(107);
			match(LBRACE);
			setState(108);
			enumList();
			setState(109);
			match(RBRACE);
			setState(110);
			match(ID);
			setState(111);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SystemVerilog2TreeParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystemVerilog2TreeParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SystemVerilog2TreeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SystemVerilog2TreeParser.COMMA, i);
		}
		public EnumListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterEnumList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitEnumList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitEnumList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumListContext enumList() throws RecognitionException {
		EnumListContext _localctx = new EnumListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enumList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(ID);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(114);
				match(COMMA);
				setState(115);
				match(ID);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SystemVerilog2TreeParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(SystemVerilog2TreeParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SystemVerilog2TreeParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(SystemVerilog2TreeParser.SEMICOLON, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__4);
			setState(122);
			returnType();
			setState(123);
			match(ID);
			setState(124);
			match(LPAREN);
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(125);
				parameterList();
				}
				break;
			}
			setState(128);
			match(RPAREN);
			setState(129);
			match(SEMICOLON);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13361241856L) != 0)) {
				{
				{
				setState(130);
				statement();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SystemVerilog2TreeParser.ID, 0); }
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterReturnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitReturnType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitReturnType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 268436352L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public QualifierContext qualifier() {
			return getRuleContext(QualifierContext.class,0);
		}
		public TerminalNode STARR() { return getToken(SystemVerilog2TreeParser.STARR, 0); }
		public TerminalNode ID() { return getToken(SystemVerilog2TreeParser.ID, 0); }
		public List<DataTypeContext> dataType() {
			return getRuleContexts(DataTypeContext.class);
		}
		public DataTypeContext dataType(int i) {
			return getRuleContext(DataTypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SystemVerilog2TreeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SystemVerilog2TreeParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilog2TreeListener ) ((SystemVerilog2TreeListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilog2TreeVisitor ) return ((SystemVerilog2TreeVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(140);
				parameter();
				}
				break;
			}
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(143);
				qualifier();
				}
			}

			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STARR) {
				{
				setState(146);
				match(STARR);
				}
			}

			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(149);
				match(ID);
				}
				break;
			}
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 275146346240L) != 0)) {
				{
				{
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(152);
					match(COMMA);
					}
				}

				setState(155);
				dataType();
				setState(156);
				parameter();
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
